internal/pathmatch/y.output

state 0
	$accept: .path $end 

	tLiteral  shift 5
	tOpenBrace  shift 4
	.  error

	path  goto 1
	exprs  goto 2
	expr  goto 3

state 1
	$accept:  path.$end 

	$end  accept
	.  error


state 2
	path:  exprs.    (1)

	.  reduce 1 (src line 42)


state 3
	exprs:  expr.    (2)
	exprs:  expr.exprs 

	tLiteral  shift 5
	tOpenBrace  shift 4
	.  reduce 2 (src line 45)

	exprs  goto 6
	expr  goto 3

state 4
	expr:  tOpenBrace.pattern tCloseBrace 

	tLiteral  shift 8
	.  error

	pattern  goto 7

state 5
	expr:  tLiteral.    (5)

	.  reduce 5 (src line 66)


state 6
	exprs:  expr exprs.    (3)

	.  reduce 3 (src line 53)


state 7
	expr:  tOpenBrace pattern.tCloseBrace 

	tCloseBrace  shift 9
	.  error


state 8
	pattern:  tLiteral.tColon tLiteral 
	pattern:  tLiteral.    (7)

	tColon  shift 10
	.  reduce 7 (src line 76)


state 9
	expr:  tOpenBrace pattern tCloseBrace.    (4)

	.  reduce 4 (src line 61)


state 10
	pattern:  tLiteral tColon.tLiteral 

	tLiteral  shift 11
	.  error


state 11
	pattern:  tLiteral tColon tLiteral.    (6)

	.  reduce 6 (src line 71)


7 terminals, 5 nonterminals
8 grammar rules, 12/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 5/240000
0 extra closures
8 shift entries, 1 exceptions
5 goto entries
1 entries saved by goto default
Optimizer space used: output 11/240000
11 table entries, 0 zero
maximum spread: 7, maximum offset: 7
